docs: add readme.md info

--- a/Posetrix/Views/FoldersAddView.xaml
+++ b/Posetrix/Views/FoldersAddView.xaml
@@ -59,7 +59,7 @@
                 Style="{StaticResource FoldersAddRemoveButton}">
                 <Button.ToolTip>
                     <ToolTip>
-                        <TextBlock Style="{StaticResource InfoToolTip}" Text="Remove a folder" />
+                        <TextBlock Style="{StaticResource InfoToolTip}" Text="Remove selected folder" />
                     </ToolTip>
                 </Button.ToolTip>
             </Button>
