--- a/Posetrix/Views/PredefinedIntervalsView.xaml
+++ b/Posetrix/Views/PredefinedIntervalsView.xaml
@@ -11,41 +11,46 @@
     mc:Ignorable="d">
     <Grid>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition />
-            <ColumnDefinition />
-            <ColumnDefinition />
-            <ColumnDefinition />
-            <ColumnDefinition />
-            <ColumnDefinition />
+            <ColumnDefinition Width="*" />
+            <ColumnDefinition Width="*" />
+            <ColumnDefinition Width="*" />
+            <ColumnDefinition Width="*" />
+            <ColumnDefinition Width="*" />
+            <ColumnDefinition Width="*" />
         </Grid.ColumnDefinitions>
         <RadioButton
             Grid.Column="0"
-            Margin="0,0,4,0"
             Content="30s"
-            IsChecked="{Binding SelectedInterval, Converter={StaticResource EnumConverter}, ConverterParameter={x:Static viewmodels:Intervals.Interval1}}" />
+            IsChecked="{Binding SelectedInterval, Converter={StaticResource EnumConverter}, ConverterParameter={x:Static viewmodels:Intervals.Interval1}}"
+            Style="{StaticResource RadioToggleButton}" />
         <RadioButton
             Grid.Column="1"
-            Margin="0,0,4,0"
+            Margin="4,0,4,0"
             Content="45s"
-            IsChecked="{Binding SelectedInterval, Converter={StaticResource EnumConverter}, ConverterParameter={x:Static viewmodels:Intervals.Interval2}}" />
+            IsChecked="{Binding SelectedInterval, Converter={StaticResource EnumConverter}, ConverterParameter={x:Static viewmodels:Intervals.Interval2}}"
+            Style="{StaticResource RadioToggleButton}" />
         <RadioButton
             Grid.Column="2"
             Margin="0,0,4,0"
             Content="1m"
-            IsChecked="{Binding SelectedInterval, Converter={StaticResource EnumConverter}, ConverterParameter={x:Static viewmodels:Intervals.Interval3}}" />
+            IsChecked="{Binding SelectedInterval, Converter={StaticResource EnumConverter}, ConverterParameter={x:Static viewmodels:Intervals.Interval3}}"
+            Style="{StaticResource RadioToggleButton}" />
         <RadioButton
             Grid.Column="3"
             Margin="0,0,4,0"
             Content="2m"
-            IsChecked="{Binding SelectedInterval, Converter={StaticResource EnumConverter}, ConverterParameter={x:Static viewmodels:Intervals.Interval4}}" />
+            IsChecked="{Binding SelectedInterval, Converter={StaticResource EnumConverter}, ConverterParameter={x:Static viewmodels:Intervals.Interval4}}"
+            Style="{StaticResource RadioToggleButton}" />
         <RadioButton
             Grid.Column="4"
             Margin="0,0,4,0"
             Content="5m"
-            IsChecked="{Binding SelectedInterval, Converter={StaticResource EnumConverter}, ConverterParameter={x:Static viewmodels:Intervals.Interval5}}" />
+            IsChecked="{Binding SelectedInterval, Converter={StaticResource EnumConverter}, ConverterParameter={x:Static viewmodels:Intervals.Interval5}}"
+            Style="{StaticResource RadioToggleButton}" />
         <RadioButton
             Grid.Column="5"
             Content="10m"
-            IsChecked="{Binding SelectedInterval, Converter={StaticResource EnumConverter}, ConverterParameter={x:Static viewmodels:Intervals.Interval6}}" />
+            IsChecked="{Binding SelectedInterval, Converter={StaticResource EnumConverter}, ConverterParameter={x:Static viewmodels:Intervals.Interval6}}"
+            Style="{StaticResource RadioToggleButton}" />
     </Grid>
 </UserControl>
